<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:key="prefs1_checkbox"
		android:title="@string/prefs1_pref1_title"
		android:summary="@string/prefs1_pref1_summary"/>

	<RingtonePreference
		android:key="prefs1_ringtone"
		android:showDefault="true"
		android:showSilent="true"
		android:title="@string/prefs1_pref2_title"
		android:summary="@string/prefs1_pref2_summary"/>

	<EditTextPreference
		android:key="prefs1_text"
		android:title="@string/prefs1_pref3_title"
		android:summary="@string/prefs1_pref3_summary"
		android:dialogTitle="@string/prefs1_pref3_dialogtitle"/>

	<ListPreference
		android:entries="@array/currencies"
		android:entryValues="@array/iso_codes"
		android:key="prefs1_list"
		android:title="@string/prefs1_pref4_title"
		android:summary="@string/prefs1_pref4_summary"
		android:dialogTitle="@string/prefs1_pref4_dialogtitle"/>

</PreferenceScreen>