<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

	<TableRow>

		<TextView
			android:text="@string/checkbox"/>

		<TextView
			android:id="@+id/checkbox"/>
	</TableRow>

	<TableRow>

		<TextView
			android:text="@string/ringtone"/>

		<TextView
			android:id="@+id/ringtone"/>
	</TableRow>

	<TableRow>

		<TextView
			android:text="@string/checkbox2"/>

		<TextView
			android:id="@+id/checkbox2"/>
	</TableRow>

	<TableRow>

		<TextView
			android:text="@string/text"/>

		<TextView
			android:id="@+id/text"/>
	</TableRow>

	<TableRow>

		<TextView
			android:text="@string/list"/>

		<TextView
			android:id="@+id/list"/>
	</TableRow>
	
	<TableRow>

		<TextView
			android:text="@string/preffiled_list"/>

		<TextView
			android:id="@+id/prefilled_list"/>
	</TableRow>
	
	<TableRow>

		<TextView android:text="@string/hidden_pref_value" />

		<EditText
			android:id="@+id/text_to_save"
			android:inputType="text"/>
	</TableRow>

</TableLayout>